diesel_compile_tests/tests/fail/boxed_queries_require_selectable_expression_for_order.stderr
error[E0277]: the trait bound `users::table: diesel::query_source::AppearsInFromClause<posts::table>` is not satisfied
  --> $DIR/boxed_queries_require_selectable_expression_for_order.rs:21:37
   |
21 |     users::table.into_boxed::<Pg>().order(posts::title.desc());
   |                                     ^^^^^ the trait `diesel::query_source::AppearsInFromClause<posts::table>` is not implemented for `users::table`
   |
   = help: the following implementations were found:
             <users::table as diesel::query_source::AppearsInFromClause<users::table>>
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<users::table>` for `posts::columns::title`
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<users::table>` for `diesel::expression::operators::Desc<posts::columns::title>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::methods::OrderDsl<diesel::expression::operators::Desc<posts::columns::title>>` for `diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, diesel::pg::Pg>`
